--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
         <p id="dynamic" class="lg-text">
             ALICE IN <br>WONDERLAND
         </p>
-        <p id="sm-text">MADE BY AMELi <br> <a href="https://blog.naver.com/renesmi" target="_blank">blog.naver.com/renesmi</a>
-
+        <p id="sm-text">MADE BY AMELi <br> 
         </p>
     </div>
     <script src="main.js"></script>
