--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p id="dynamic" class="lg-text">
             ALICE IN <br>WONDERLAND
         </p>
-        <p id="sm-text">MADE BY AMELi <br> 
+        <p id="sm-text">MADE BY SUMIN <br> 
         </p>
     </div>
     <script src="main.js"></script>
